--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
  </ol>
  </nav>
 <h1>Bernedoodles</h1>
-
-<h2>Sheepadooles </h2>
+<img src= "Bernedoodle.JPG" alt= "Picture of a mini bernedoodle" />
+<h2>Sheepadoodles </h2>
+<img src = "Sheepadoodle.JPG" alt= "Picture of a mini sheepadoodle" />
 
 
 
