updated dog website

--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
-<title Cute Dogs ></title>
+<title Doodles ></title>
 </head>
 
 <body>
 <nav class= "Doodles">
 <ol>
-  <li class= "Doodles"><a href="Dogs">Dogs</a></li>
   <li class= "Doodles"><a href="Dogs/Bernedoodle">Bernedoodle</a></li>
   <li class= "Doodles"><a href= "Dogs/Sheepadoodle">Sheepadoodle</a></li>
  </ol>
  </nav>
 <h1>Bernedoodles</h1>
-
-<h2>Sheepadooles </h2>
+ 
+<h2>Sheepadoodles </h2>
 
 
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Sep 23 10:02:15 MDT 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Sep 23 10:39:13 MDT 2019 <!-- hhmts end -->
 </body> </html>
