--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
 <title Doodles ></title>
+<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 </head>
 
 <body>
 <nav class= "Doodles">
-<ol>
-  <li class= "Doodles"><a href="Dogs/Bernedoodle">Bernedoodle</a></li>
-  <li class= "Doodles"><a href= "Dogs/Sheepadoodle">Sheepadoodle</a></li>
+  <li class= "Doodles"><a href="Bernedoodle">Bernedoodle</a></li>
+  <li class= "Doodles"><a href= "Sheepadoodle">Sheepadoodle</a></li>
  </ol>
  </nav>
-<h1>Bernedoodles</h1>
+<center><h1>Doodles</h1>
 
  
-<h2>Sheepadoodles </h2>
-<img src= "Bernedoodle.JPG" alt= "Picture of a mini bernedoodle" />
-<h2>Sheepadoodles </h2>
-<img src = "Sheepadoodle.JPG" alt= "Picture of a mini sheepadoodle" />
+<center><h2>Bernedoodles </h2>
+<center><img src= "Bernedoodle.jpg" alt= "Picture of a mini bernedoodle" style= "width:300px;height:300px;" />
+<center><p> Bernedoodles make great pets. </p>
+ <center><a href="https://www.petguide.com/breeds/dog/bernedoodle/">Click for more information on bernedoodles</a>
+<center><h2>Sheepadoodles </h2>
+<center> <img src = "Sheepadoodle.jpg" alt= "Picture of a mini sheepadoodle" style= "width:300px;height:300px;"  />
+ <p> Sheepadoodles are one of the sweetest dogs. They are incredibly smart and loving. </p>
+ <a href= "https://www.petguide.com/breeds/dog/sheepadoodle/"> Click for more information of sheepadoodles </a>
+ 
 
 
 
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Sep 23 10:49:06 MDT 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Sep 23 12:24:49 MDT 2019 <!-- hhmts end -->
 </body> </html>
