--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <center><h2>Sheepadoodles </h2>
 <center> <img src = "Sheepadoodle.jpg" alt= "Picture of a mini sheepadoodle" style= "width:300px;height:300px;"  />
  <p> Sheepadoodles are one of the sweetest dogs. They are incredibly smart and loving. </p>
- <a href= "https://www.petguide.com/breeds/dog/sheepadoodle/"> Click for more information of sheepadoodles </a>
+ <a href= "https://www.petguide.com/breeds/dog/sheepadoodle/"> Click for more information on sheepadoodles </a>
  
 
 
@@ -30,5 +30,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Sep 23 12:24:49 MDT 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Sep 23 12:33:14 MDT 2019 <!-- hhmts end -->
 </body> </html>
